--- a/client/scss/components/react-animation.scss
+++ b/client/scss/components/react-animation.scss
@@ -1,10 +1,10 @@
-/*react 动画效果*/
+/* react 动画效果 */
 
 // 透明效果
 // 利用 :global 设为全局样式
 :global {
   .opacity-enter {
-    opacity: 0.01;
+    opacity: .01;
   }
 
   .opacity-enter.opacity-enter-active {
@@ -17,7 +17,7 @@
   }
 
   .opacity-exit.opacity-exit-active {
-    opacity: 0.01;
+    opacity: .01;
     transition: opacity 300ms ease-in;
   }
 
@@ -70,7 +70,7 @@
 
   //渐入效果
   .burst-in-enter {
-    opacity: 0.01;
+    opacity: .01;
     backface-visibility: hidden;
     animation-duration: .3s;
     animation-timing-function: ease-in-out;
@@ -85,7 +85,7 @@
   @keyframes burstIn {
     0% {
       opacity: 0;
-      transform: scale(0.9);
+      transform: scale(.9);
     }
 
     100% {
