--- a/client/scss/components/toast.scss
+++ b/client/scss/components/toast.scss
@@ -12,7 +12,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
 
@@ -21,14 +20,14 @@
   outline: 0;
   opacity: 0;
   transform: translateZ(0);
-  will-change: transform; /* 动画性能优化 https://www.w3cplus.com/css3/introduction-css-will-change-property.html*/
+  will-change: transform; /* 动画性能优化 https://www.w3cplus.com/css3/introduction-css-will-change-property.html */
 
   .toast {
     max-width: 80%;
-    padding: 0.5rem 1rem;
-    border-radius: 0.7rem;
+    padding: .5rem 1rem;
+    border-radius: .7rem;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, .7);
     opacity: 0;
   }
 
@@ -60,6 +59,7 @@
   height: 30px;
   margin: 0 auto;
   text-align: center;
+
   .toast {
     max-width: 100%;
     padding: 5px;
@@ -68,6 +68,7 @@
 
   &.enter {
     display: block;
+
     .toast {
       display: block;
     }
@@ -75,6 +76,7 @@
 
   &.leave {
     display: none;
+
     .toast {
       display: none;
     }
