--- a/client/scss/modules/footer.scss
+++ b/client/scss/modules/footer.scss
@@ -12,15 +12,15 @@
   background: url($image-path + "header-bk.png") center #fff;
 
   a {
-    color: #FFF;
+    color: #fff;
     text-decoration: none;
     font-weight: 700;
   }
 
   p {
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
     font-size: 14px;
-    color: #FFF;
+    color: #fff;
   }
 }
 
