--- a/client/scss/variables.scss
+++ b/client/scss/variables.scss
@@ -1,5 +1,5 @@
 $font-size-root: 16px;
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$font-family-sans-serif: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", arial, sans-serif;
 $font-family-base: $font-family-sans-serif;
 $font-size-base: 1rem;
 $line-height-base: 1.5;
